Fixed some spacing on the homepage

--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,14 @@ body {
 .bg1 {
     border-radius: 5%;
     width: 40em;
+    margin-bottom: -2em;
 }
 
 .introP {
     margin: 2em 2em;
     font-size: 50px;
     text-align: center;
+    margin-bottom: -2em;
 }
 
 h1 {
